gcc/testsuite/rust/rustc/ui/multiple-main-2.rs
#![feature(main)]

#[main]
fn bar() {
}

#[main]
fn foo() { // { dg-error ".E0137." "" { target *-*-* } }
}

